<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/valueToConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_weight"
        android:autofillHints="1"
        android:inputType="numberDecimal"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/convert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert" />

    <TextView
        android:id="@+id/convertedValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/converted_value"
        android:textSize="40sp"/>

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="settingsClicked"
        android:text="@string/settings" />

    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="resetButtonClicked"
        android:text="@string/reset" />

</androidx.appcompat.widget.LinearLayoutCompat>

