<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conversion_type" />

        <Button
            android:id="@+id/distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="distanceClicked"
            android:text="@string/cm_to_inch" />

        <Button
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="weightClicked"
            android:text="@string/kg_to_lb" />

        <Button
            android:id="@+id/energy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="energyClicked"
            android:text="@string/actual_power_to_apparent_power" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>